Add: User related exceptions, code cleaning